--- a/frontend/src/pages/FilterTable.css
+++ b/frontend/src/pages/FilterTable.css
@@ -49,8 +49,8 @@ th {
 }
 
 .filter-search {
-    margin-top: 40px;
-    margin-bottom: 20px;
+    /*margin-top: 40px;
+    margin-bottom: 20px;*/
     text-align: center;
 
     &>select {
@@ -64,4 +64,9 @@ th {
         height: 30px;
         margin-left: 10px;
     }
+}
+
+.filter-margins {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
